# SongBird

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/app/: AppBootstrap.cpp  AppBootstrap.h  AppBootstrapAdapters.cpp  AppBootstrapAdapters.h  AppBootstrapObjects.cpp  AppBootstrapObjects.h  AppBootstrapUiCommandPlan.h  AppBootstrapWorkflowWiring.cpp  AppRuntimeResolver.cpp  AppRuntimeResolver.h  AppUpdateCheckCoordinator.cpp  AppUpdateCheckCoordinator.h  AppUpdateCheckPresentation.cpp  AppUpdateCheckPresentation.h  AppUpdateInstallService.cpp  AppUpdateInstallService.h  ApplicationRestartCoordinator.cpp  ApplicationRestartCoordinator.h  BackgroundTaskCoordinator.cpp  BackgroundTaskCoordinator.h  BackgroundThreadTracker.cpp  BackgroundThreadTracker.h  ConfigBackupCoordinator.cpp  ConfigBackupCoordinator.h  ConfigPathResolver.h  CoreDiscoveryService.cpp  CoreDiscoveryService.h  CoreProcessCleanupService.cpp  CoreProcessCleanupService.h  CoreStartupChecklist.cpp  CoreStartupChecklist.h  CoreStartupChecklistController.cpp  CoreStartupChecklistController.h  CoreStartupCheckpoint.h  CoreUpdateCoordinator.cpp  CoreUpdateCoordinator.h  CoreUpdatePendingState.cpp  CoreUpdatePendingState.h  DefaultServerSwitchCoordinator.cpp  DefaultServerSwitchCoordinator.h  (+47 more)
src/backends/: CoreBackendRegistry.cpp
src/common/: AppPlatform.h  CorePidFile.h  DataSizeFormatter.h  DialogUtils.h  GitHubMirrorHelper.h  GitHubUrls.h  OperationResult.h  PortValidator.h  ServerDisplayName.h  SystemProxyMode.h  UserAgent.h
src/persistence/: IConfigRepository.h  JsonConfigCollectionSerialization.cpp  JsonConfigCollectionSerialization.h  JsonConfigMigration.cpp  JsonConfigMigration.h  JsonConfigPolicySerialization.cpp  JsonConfigPolicySerialization.h  JsonConfigRepository.cpp  JsonConfigRepository.h  JsonConfigRootSerialization.cpp  JsonConfigRootSerialization.h  JsonConfigRoutingSerialization.cpp  JsonConfigRoutingSerialization.h  JsonConfigSerialization.cpp  JsonConfigSerialization.h  JsonConfigServerSerialization.cpp  JsonConfigServerSerialization.h  JsonConfigStateSerialization.cpp  JsonConfigStateSerialization.h  JsonConfigSubscriptionSerialization.cpp  JsonConfigSubscriptionSerialization.h  JsonConfigTunSerialization.cpp  JsonConfigTunSerialization.h  JsonConfigUiSerialization.cpp  JsonConfigUiSerialization.h  JsonConfigUtils.h
src/proto/: Statistics.proto
src/resources/: SongBird.exe.manifest  SongBird.rc  SongBox.exe.manifest  SongBox.rc  app_icons.qrc  themes.qrc  toolbar_icons.qrc  v2rayq.exe.manifest  v2rayq.rc
src/runtime/: ClashConfigWriter.cpp  ClashConfigWriter.h  ClientConfigWriter.cpp  ClientConfigWriter.h  CoreConfigPreflight.cpp  CoreConfigPreflight.h  CoreInfo.h  CoreLifecycleService.cpp  CoreLifecycleService.h  CoreProcessOutputBuffer.cpp  CoreProcessOutputBuffer.h  DnsAddressParser.cpp  DnsAddressParser.h  DnsConfigFragments.cpp  DnsConfigFragments.h  DnsHosts.cpp  DnsHosts.h  ICoreProcessHost.h  LegacyDnsConfigBuilder.cpp  LegacyDnsConfigBuilder.h  ProtocolConfigMapper.cpp  ProtocolConfigMapper.h  ProtocolCoreCompat.h  QtCoreProcessHost.cpp  QtCoreProcessHost.h  RoutingConfigFragments.cpp  RoutingConfigFragments.h  RoutingRuleJsonMapper.cpp  RoutingRuleJsonMapper.h  RoutingRuleJsonSupport.cpp  RoutingRuleJsonSupport.h  ServerConfigWriter.cpp  ServerConfigWriter.h  SingBoxDnsConfigBuilder.cpp  SingBoxDnsConfigBuilder.h  SingBoxDnsConfigSupport.cpp  SingBoxDnsConfigSupport.h  SingBoxDnsRuleConfig.cpp  SingBoxDnsRuleConfig.h  SingBoxFakeIpFilter.cpp  (+4 more)
src/services/: AppUpdateReleaseMetadata.cpp  AppUpdateReleaseMetadata.h  AppUpdateService.cpp  AppUpdateService.h  ClashRestStatisticsBackend.cpp  ClashRestStatisticsBackend.h  ConfigBackupService.cpp  ConfigBackupService.h  ConfigBackupStateDocument.cpp  ConfigBackupStateDocument.h  CoreUpdateInstallFiles.cpp  CoreUpdateInstallFiles.h  CoreUpdateOperations.cpp  CoreUpdateOperations.h  CoreUpdatePackageDownload.cpp  CoreUpdatePackageDownload.h  CoreUpdatePackageInstallation.cpp  CoreUpdatePackageInstallation.h  CoreUpdateReleaseMetadata.cpp  CoreUpdateReleaseMetadata.h  CoreUpdateReleaseResolution.cpp  CoreUpdateReleaseResolution.h  CoreUpdateService.cpp  CoreUpdateService.h  CoreUpdateVersion.cpp  CoreUpdateVersion.h  GeoResourceDownload.cpp  GeoResourceDownload.h  GeoResourceUpdateService.cpp  GeoResourceUpdateService.h  GrpcStatisticsBackend.cpp  GrpcStatisticsBackend.h  GrpcStatisticsParser.cpp  GrpcStatisticsParser.h  PolicyGroupService.cpp  PolicyGroupService.h  ProxyAvailabilityCheckService.cpp  ProxyAvailabilityCheckService.h  RoutingService.cpp  RoutingService.h  (+32 more)
src/subscription/: ClashProxyItemParser.cpp  ClashProxyItemParser.h  ClashSubscriptionParser.cpp  ClashSubscriptionParser.h  ClashYamlProxyParser.cpp  ClashYamlProxyParser.h  ConfigFileImportParser.cpp  ConfigFileImportParser.h  CustomConfigTextParser.cpp  ShareUrlBuilder.cpp  (+31 more)
tests/: AddServerDialogTests.cpp  AppBootstrapTunRuntimeTests.cpp  AppBootstrapUiCommandPlanTests.cpp  AppUpdateCheckCoordinatorTests.cpp  AppUpdateServiceTests.cpp  CMakeLists.txt  ClashConfigWriterTests.cpp  ClientConfigWriterTests.cpp  ConfigBackupStateDocumentTests.cpp  ConfigFileImportParserTests.cpp  CoreUpdateCoordinatorTests.cpp  CoreUpdateServiceTests.cpp  EndToEndSmokeTests.cpp  GeoResourceUpdateServiceTests.cpp  GlobalHotkeyDialogTests.cpp  JsonConfigRepositoryTests.cpp  MainWindowTests.cpp  ProtocolCoreCompatTests.cpp  ProxyAvailabilityCheckServiceTests.cpp  ProxySessionTests.cpp  RoutingServiceTests.cpp  RuntimeStateTests.cpp  ServerConfigWriterTests.cpp  ServerServiceTests.cpp  SettingsDialogApplyPlanTests.cpp  SettingsDialogTests.cpp  ShareUrlTests.cpp  SpeedTestServiceInternalTests.cpp  StartupAdminElevationTests.cpp  StatisticsServiceTests.cpp  SubscriptionParserTests.cpp  SubscriptionServiceTests.cpp  SubscriptionUrlImportServiceTests.cpp  SystemProxyModeTests.cpp  TunCompatCoreRequirementTests.cpp  TunSettingsApplyDecisionTests.cpp  UserAgentTests.cpp  WindowsGlobalHotkeyBindingTests.cpp  WindowsGlobalHotkeyServiceTests.cpp
(+202 files in other folders)
